--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="fr.uparis.projet">
 
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".DictionaryApplication"
@@ -18,8 +18,9 @@
         tools:targetApi="31">
         <service
             android:name=".LearningService"
+            android:description="@string/learning_service"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="true" />
 
         <activity
             android:name=".SauvegardeActivity"
